<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.myreminder.MainActivity">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="1"
        android:title="@string/action_home"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_reminder"
        android:orderInCategory="2"
        android:title="@string/action_create_add_reminder"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_high_priority"
        android:orderInCategory="3"
        android:title="@string/view_high_priority"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_medium_priority"
        android:orderInCategory="4"
        android:title="@string/view_medium_priority"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_view_low_priority"
        android:orderInCategory="5"
        android:title="@string/view_low_priority"
        app:showAsAction="never" />
</menu>